# clser

./: .gitignore  README.md  pyproject.toml
example/: multi_args.yaml  single_args.yaml
src/clser/: __main__.py
src/clser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/clser/config/: multilabel_task_args.py
src/clser/core/: run_classification.py
src/clser/utils/: logger.py
tests/: multi_run.sh  single_run.sh  test.py
