[bulid-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clser"
version = "0.1.0"
description = "deal with classify task"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{name = "guojian"}]
dependencies = [
    "transformers>=4.55"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["clser*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

select = ["E", "F", "I", "UP", "B"]
ignore = []



